--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dnd-html5-backend": "^2.6.0",
     "react-infinite-scroller": "^1.1.3",
     "react-scripts": "^1.0.10",
+    "react-slick": "^0.23.1",
     "react-test-renderer": "^15.5.4",
     "redux-devtools-extension": "^2.13.0",
     "redux-logger": "^3.0.1",
