--- a/package.json
+++ b/package.json
@@ -42,21 +42,23 @@
   "dependencies": {
     "antd": "latest",
     "axios": "^0.16.2",
+    "bootstrap": "^4.1.0",
     "chartist": "latest",
     "chartist-plugin-tooltip": "latest",
     "classnames": "^2.2.5",
     "fast-memoize": "^2.2.7",
     "fastclick": "^1.0.6",
     "idx": "^1.5.0",
+    "jquery": "latest",
     "lodash": "^4.17.4",
     "moment-timezone": "^0.5.13",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-avatar-editor": "^10.2.1",
     "react-chartist": "latest",
-    "jquery": "latest",
     "react-csv": "^1.0.8",
     "react-dom": "^15.5.4",
+    "react-draft-wysiwyg": "^1.12.12",
     "react-helmet": "^5.0.3",
     "react-loadable": "^4.0.3",
     "react-redux": "^5.0.4",
@@ -71,8 +73,7 @@
     "redux": "^3.7.2",
     "redux-act": "^1.3.0",
     "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.0",
-    "bootstrap": "^4.1.0"
+    "reselect": "^3.0.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
