--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.2",
     "react-avatar-editor": "^10.2.1",
+    "react-c3js": "^0.1.20",
     "react-chartist": "^0.13.1",
     "react-chartist-tooltip": "^0.4.1",
     "react-chartjs-2": "^2.7.0",
@@ -64,6 +65,7 @@
     "react-draft-wysiwyg": "^1.12.12",
     "react-helmet": "^5.0.3",
     "react-loadable": "^4.0.3",
+    "react-peity": "0.0.1",
     "react-redux": "^5.0.4",
     "react-redux-spinner": "^0.7.2",
     "react-router": "^4.2.0",
