--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "babel-plugin-tcomb": "^0.3.26",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "caniuse-api": "^2.0.0",
-    "chartist": "^0.11.0",
     "enzyme": "^2.8.2",
     "fetch-jsonp": "^1.1.3",
     "flow-bin": "^0.50.0",
@@ -46,6 +45,9 @@
     "axios": "^0.16.2",
     "bootstrap": "^4.1.0",
     "chart.js": "^2.7.2",
+    "chartist": "^0.11.0",
+    "chartist-plugin-tooltip": "^0.0.11",
+    "chartist-plugin-tooltips": "0.0.17",
     "classnames": "^2.2.5",
     "fast-memoize": "^2.2.7",
     "fastclick": "^1.0.6",
@@ -57,8 +59,7 @@
     "react": "^15.6.2",
     "react-avatar-editor": "^10.2.1",
     "react-c3js": "^0.1.20",
-    "react-chartist": "^0.13.1",
-    "react-chartist-tooltip": "^0.4.1",
+    "react-chartist": "0.13.0",
     "react-chartjs-2": "^2.7.0",
     "react-csv": "^1.0.8",
     "react-dom": "^15.6.2",
