--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "querystring": "^0.2.0",
     "react-addons-perf": "^15.4.2",
     "react-app-rewire-less": "^2.0.4",
-    "react-app-rewired": "^1.0.11",
+    "react-app-rewired": "^1.5.2",
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "^2.6.0",
     "react-infinite-scroller": "^1.1.3",
@@ -38,7 +38,8 @@
     "redux-devtools-extension": "^2.13.0",
     "redux-logger": "^3.0.1",
     "reqwest": "^2.0.5",
-    "tcomb": "^3.2.21"
+    "tcomb": "^3.2.21",
+    "react-app-rewire-eslint": "^0.2.3"
   },
   "dependencies": {
     "antd": "latest",
