--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react-app-rewire-eslint": "^0.2.3"
   },
   "dependencies": {
-    "antd": "latest",
+    "antd": "^3.5.0",
     "axios": "^0.16.2",
     "bootstrap": "^4.1.0",
     "chart.js": "^2.7.2",
