--- a/package.json
+++ b/package.json
@@ -4,98 +4,73 @@
   "private": true,
   "homepage": ".",
   "devDependencies": {
-    "babel-plugin-flow-react-proptypes": "^3.4.3",
-    "babel-plugin-idx": "^1.5.1",
-    "babel-plugin-import": "^1.2.1",
-    "babel-plugin-import-inspector": "^2.0.0",
-    "babel-plugin-lodash": "^3.2.11",
-    "babel-plugin-tcomb": "^0.3.26",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "caniuse-api": "^2.0.0",
-    "enzyme": "^2.8.2",
-    "fetch-jsonp": "^1.1.3",
-    "flow-bin": "^0.50.0",
     "husky": "^0.14.3",
-    "immutability-helper": "^2.6.6",
-    "jest": "^20.0.4",
-    "jest-enzyme": "^3.6.0",
     "lint-staged": "^4.0.2",
-    "moxios": "^0.4.0",
-    "node-sass-chokidar": "^0.0.3",
-    "npm-run-all": "^4.0.2",
-    "path": "^0.12.7",
     "prettier": "^1.5.3",
-    "querystring": "^0.2.0",
     "react-addons-perf": "^15.4.2",
-    "react-app-rewire-less": "^2.0.4",
     "react-app-rewired": "^1.5.2",
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "^2.6.0",
-    "react-infinite-scroller": "^1.1.3",
     "react-scripts": "^1.0.10",
-    "react-slick": "^0.23.1",
-    "react-syntax-highlighter": "^7.0.2",
-    "react-test-renderer": "^15.5.4",
     "redux-devtools-extension": "^2.13.0",
     "redux-logger": "^3.0.1",
-    "reqwest": "^2.0.5",
-    "tcomb": "^3.2.21",
+    "react-app-rewire-less": "^2.1.1",
     "react-app-rewire-eslint": "^0.2.3",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "querystring": "^0.2.0",
     "query-string": "^6.1.0"
   },
   "dependencies": {
-    "antd": "^3.5.0",
-    "axios": "^0.16.2",
-    "bootstrap": "^4.1.0",
-    "chart.js": "^2.7.2",
-    "chartist": "^0.11.0",
-    "chartist-plugin-tooltips": "0.0.17",
-    "classnames": "^2.2.5",
-    "fast-memoize": "^2.2.7",
-    "idx": "^1.5.0",
-    "jquery": "^3.3.1",
-    "lodash": "^4.17.4",
-    "moment-timezone": "^0.5.13",
-    "prop-types": "^15.5.10",
     "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-redux": "^5.0.4",
+    "react-redux-spinner": "^0.7.2",
+    "react-helmet": "^5.0.3",
+    "react-loadable": "^4.0.3",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.1.2",
+    "react-router-redux": "^5.0.0-alpha.6",
+    "react-transition-group": "^2.1.0",
+    "react-virtualized": "^9.18.5",
     "react-avatar-editor": "^10.2.1",
     "react-c3js": "^0.1.20",
     "react-chartist": "0.13.0",
     "react-chartjs-2": "^2.7.0",
-    "react-csv": "^1.0.8",
-    "react-dom": "^15.6.2",
     "react-draft-wysiwyg": "^1.12.12",
-    "react-helmet": "^5.0.3",
-    "react-loadable": "^4.0.3",
     "react-peity": "0.0.1",
-    "react-redux": "^5.0.4",
-    "react-redux-spinner": "^0.7.2",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.1.2",
-    "react-router-redux": "^5.0.0-alpha.6",
     "react-tap-event-plugin": "^2.0.1",
-    "react-transition-group": "^2.1.0",
-    "react-virtualized": "^9.18.5",
     "redux": "^3.7.2",
     "redux-act": "^1.3.0",
     "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.0",
+    "prop-types": "^15.5.10",
+    "classnames": "^2.2.5",
+    "lodash": "^4.17.4",
+    "antd": "^3.5.3",
+    "axios": "^0.16.2",
+    "bootstrap": "^4.1.0",
+    "jquery": "^3.3.1",
+    "chart.js": "^2.7.2",
+    "chartist": "^0.11.0",
     "chartist-plugin-tooltip": "^0.0.11",
     "rc-drawer-menu": "^0.5.7",
     "enquire-js": "^0.2.1",
     "react-container-query": "^0.11.0",
-    "react-custom-scrollbars": "^4.2.1"
+    "react-custom-scrollbars": "^4.2.1",
+
+    "//": "Ant Design Example Dependencies",
+    "fetch-jsonp": "^1.1.3",
+    "immutability-helper": "^2.7.0",
+    "react-infinite-scroller": "^1.1.4",
+    "react-syntax-highlighter": "^7.0.4",
+    "reqwest": "^2.0.5"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "start-js": "react-app-rewired start",
-    "start": "npm-run-all -p watch-css start-js",
-    "build": "npm run build-css && react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "eject": "react-scripts eject",
-    "precommit": "lint-staged",
-    "flow": "flow"
+    "precommit": "lint-staged"
   },
   "lint-staged": {
     "*.js": [
