menu improvements / app settings / dependencies update

--- a/package.json
+++ b/package.json
@@ -12,44 +12,43 @@
     "react-app-rewired": "^1.5.2",
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "^2.6.0",
-    "react-scripts": "^1.0.10",
+    "react-scripts": "^1.1.4",
     "redux-devtools-extension": "^2.13.0",
     "redux-logger": "^3.0.1",
     "react-app-rewire-less": "^2.1.1",
     "react-app-rewire-eslint": "^0.2.3",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "querystring": "^0.2.0",
-    "query-string": "^6.1.0"
+    "querystring": "^0.2.0"
   },
   "dependencies": {
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
-    "react-redux": "^5.0.4",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
     "react-redux-spinner": "^0.7.2",
     "react-helmet": "^5.0.3",
-    "react-loadable": "^4.0.3",
+    "react-loadable": "^5.4.0",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.1.2",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
-    "react-transition-group": "^2.1.0",
+    "react-transition-group": "^2.3.1",
     "react-virtualized": "^9.18.5",
     "react-avatar-editor": "^10.2.1",
     "react-c3js": "^0.1.20",
     "react-chartist": "0.13.0",
     "react-chartjs-2": "^2.7.0",
     "react-draft-wysiwyg": "^1.12.12",
-    "react-peity": "0.0.1",
+    "peity-react": "^0.0.7",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.7.2",
     "redux-act": "^1.3.0",
     "redux-thunk": "^2.2.0",
     "prop-types": "^15.5.10",
     "classnames": "^2.2.5",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.10",
     "antd": "^3.5.3",
-    "axios": "^0.16.2",
-    "bootstrap": "^4.1.0",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
     "chart.js": "^2.7.2",
     "chartist": "^0.11.0",
