--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
+  "eslintIgnore": ["config-overrides.js"],
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "husky": "^0.14.3",
