--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
-  "eslintIgnore": ["config-overrides.js"],
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "husky": "^0.14.3",
@@ -69,8 +68,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "eject": "react-scripts eject",
-    "precommit": "lint-staged"
+    "eject": "react-scripts eject"
   },
   "lint-staged": {
     "*.js": [
