package.json fixes

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "src/*.js": [
+    "src/**/*.js": [
       "prettier --tab-width 2 --print-width 100 --single-quote --trailing-comma all --no-semi --parser babylon --write"
     ]
   }
