--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "husky": "^0.14.3",
     "lint-staged": "^4.0.2",
     "prettier": "^1.5.3",
-    "react-addons-perf": "^15.4.2",
     "react-app-rewired": "^1.5.2",
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "^2.6.0",
@@ -19,14 +18,15 @@
     "react-app-rewire-eslint": "^0.2.3",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "querystring": "^0.2.0"
+    "querystring": "^0.2.0",
+    "webpack": "^4.10.2"
   },
   "dependencies": {
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
-    "react-redux-spinner": "^0.7.2",
-    "react-helmet": "^5.0.3",
+    "react-redux-spinner": "^1.1.3",
+    "react-helmet": "^5.2.0",
     "react-loadable": "^5.4.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
@@ -35,11 +35,12 @@
     "react-virtualized": "^9.18.5",
     "react-avatar-editor": "^10.2.1",
     "react-c3js": "^0.1.20",
-    "react-chartist": "0.13.0",
+    "react-chartist": "^0.13.1",
     "react-chartjs-2": "^2.7.0",
-    "react-draft-wysiwyg": "^1.12.12",
+    "react-draft-wysiwyg": "^1.12.13",
+    "draft-js": "^0.10.5",
+    "immutable": "^3.8.2",
     "peity-react": "^0.0.7",
-    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.7.2",
     "redux-act": "^1.3.0",
     "redux-thunk": "^2.2.0",
@@ -49,9 +50,10 @@
     "antd": "^3.5.3",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "popper.js": "^1.14.3",
     "jquery": "^3.3.1",
     "chart.js": "^2.7.2",
-    "chartist": "^0.11.0",
+    "chartist": "^0.10.1",
     "chartist-plugin-tooltip": "^0.0.11",
     "rc-drawer-menu": "^0.5.7",
     "enquire-js": "^0.2.1",
