--- a/package.json
+++ b/package.json
@@ -65,7 +65,14 @@
     "redux-act": "^1.3.0",
     "redux-thunk": "^2.2.0",
     "reqwest": "^2.0.5",
-    "webpack": "^3.12.0"
+    "webpack": "^3.12.0",
+    "react-stockcharts": "^0.7.0-beta.22",
+    "d3-dsv": "^1.0.8",
+    "d3-format": "^1.2.1",
+    "d3-scale": "^1.0.7",
+    "d3-time-format": "^2.1.1",
+    "moment": "^2.19.3",
+    "moment-timezone": "^0.5.14"
   },
   "scripts": {
     "start": "react-app-rewired start",
