--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prettier": "^1.5.3",
     "querystring": "^0.2.0",
     "react-app-rewire-eslint": "^0.2.3",
-    "react-app-rewire-less": "^2.1.1",
+    "react-app-rewire-less": "2.1.1",
     "react-app-rewired": "^1.5.2",
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "^2.6.0",
