--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prettier": "^1.5.3",
     "querystring": "^0.2.0",
     "react-app-rewire-eslint": "^0.2.3",
-    "react-app-rewire-less": "^2.1.1",
+    "react-app-rewire-less": "2.1.1",
     "react-app-rewired": "^1.5.2",
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "^2.6.0",
@@ -40,7 +40,7 @@
     "peity-react": "^0.0.7",
     "popper.js": "^1.14.3",
     "prop-types": "^15.5.10",
-    "rc-drawer-menu": "^0.5.7",
+    "rc-drawer": "^1.4.4",
     "react": "^16.4.0",
     "react-avatar-editor": "^10.2.1",
     "react-c3js": "^0.1.20",
